--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <nav>
-  <a href="index.html">Home</a>
+  <a href="index.html">Inicio</a>
 
   <a href="nuevoUsuario.html">Crear usuarios</a>
 
