Actualización del get, union front con back by Julio

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <a href="nuevoUsuario.html">Crear usuarios</a>
 
-  <a href="verUsuario.html">Usuarios</a>
+  <a href="usuarios">Usuarios</a>
 </nav>
 
 <h2 class="titulo">Bienvenidos </h2>
