--- a/public/nuevoUsuario.html
+++ b/public/nuevoUsuario.html
@@ -16,27 +16,25 @@
 
 <h2 class="titulo">Ingrese usuarios de nuevo ingreso </h2>
 
-<form action="nuevoUsuario.html" method="get">
-    <label for="nombre">Nombre</label>
-    <input id="nombre" name="nombre" type="text" placeholder="Ej: escriba su nombre">
-    <br><br>
+<form action="/crearUsuario" method="post">
+  <label>Nombre</label>
+  <input type="text" name="nombre" placeholder="Escriba su nombre - ej: Ludovico Peluche" required>
 
-    <label for="altura">Altura</label>
-    <input id="altura" name="altura" type="text" placeholder="Ej: 1.50m">
-    <br><br>
+  <label>DPI</label>
+  <input type="text" name="dpi" placeholder="Escribe tu DPI sin guiones" pattern="[0-9]{13}" maxlength="13" title="Ingrese solo números, al menos 13 dígitos" required>
 
-    <label for="edad">Edad</label>
-    <input id="edad" name="edad" type="text" placeholder="Ej: 20">
-    <br><br>
+  <label>Altura</label>
+  <input type="number" name="altura" placeholder="Altura ej. 1.80" step="0.01" min="0.01" required>
 
-    <label for="email">Email</label>
-    <input id="email" name="email" type="email" placeholder="ejemplo@correo.com">
-    <br><br>
+  <label>Edad</label>
+  <input type="number" name="edad" placeholder="Ingresa tu edad" min="1" required>
 
+  <label>Correo</label>
+  <input type="email" name="correo" placeholder="ejemplo@correo.com" required>
 
-
-    <button type="reset">Limpiar</button>
-    <button type="submit">Guardar</button>
+  <br><br>
+  <button type="submit">Guardar</button>
+  <button type="reset">Limpiar</button>
 </form>
 
 </body>
