--- a/public/nuevoUsuario.html
+++ b/public/nuevoUsuario.html
@@ -32,6 +32,8 @@
   <label>Correo</label>
   <input type="email" name="correo" placeholder="ejemplo@correo.com" required>
 
+  <label>Empresa asignada</label>
+  <input type="text" name="Empresa" placeholder="Escriba la empresa" required>
   <br><br>
   <button type="submit">Guardar</button>
   <button type="reset">Limpiar</button>
