Incorporacion de empresa al select

--- a/public/verUsuario.html
+++ b/public/verUsuario.html
@@ -25,6 +25,7 @@
       <option value="nombre">Nombre</option>
       <option value="correo">Correo</option> 
       <option value="dpi">DPI</option>
+      <option value="empresa">Empresa</option>
     </select>
     <input id="valor" name="valor" type="text" placeholder="Escriba">
   </div>
