--- a/public/nuevoUsuario.html
+++ b/public/nuevoUsuario.html
@@ -33,7 +33,7 @@
   <input type="email" name="correo" placeholder="ejemplo@correo.com" required>
 
   <label>Empresa asignada</label>
-  <input type="text" name="Empresa" placeholder="Escriba la empresa" required>
+  <input type="number" name="empresa_id" placeholder="Escriba la empresa" required>
   <br><br>
   <button type="submit">Guardar</button>
   <button type="reset">Limpiar</button>
